# git-objview

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
docs/: conf.py  data-model.rst  index.rst
docs/source/: api.rst  conf.py  data-model.rst  index.rst
src/git_objview/: __init__.py  app.py  db.py  git.py  style.tcss  utils.py
src/git_objview/tools/: git_objview_util.py
tests/: test_db.py
