[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80.9.0", "setuptools-scm>=8.3.1"]

[dependency-groups]
dev = [
  "ipython>=9.4.0",
  "mypy>=1.17.0",
  "pytest>=8.4.1",
  "pytest-sugar>=1.0.0",
  "textual-dev>=1.7.0"
]

[project]
authors = [
  {name = "Jevin Sweval", email = "jevinsweval@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11"
]
dependencies = [
  "anytree>=2.13.0",
  "attrs>=25.3.0",
  "gitdb>=4.0.12",
  "path>=17.1.0",
  "pygit2>=1.18.0",
  "rich>=14.0.0",
  "textual>=4.0.0"
]
description = "TUI git object viewer - think Midnight Commander or exa"
dynamic = ["version"]
keywords = ["git", "gitdb", "git-objects", "git browse"]
license = "BSD-2-Clause"
name = "git-objview"
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = ">=3.11"  # for PyPy (and GraalPy I guess) compat

[project.scripts]
git-objview = "git_objview.tools.git_objview_util:main"

[project.urls]
repository = "https://github.com/jevinskie/git-objview"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib"
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
preview = true
required-version = ">=0.12"
show-fixes = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["I", "PERF", "RUF", "FA", "UP"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"git_objview" = ["assets/*.tcss"]

[tool.setuptools_scm]
version_file = "src/git_objview/_version.py"
